# SplitNaira

backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/__tests__/: history.test.ts  routes.test.ts
backend/src/middleware/: api-error.ts  error.ts  validate.ts
backend/src/middleware/__tests__/: error.test.ts  validate.test.ts
backend/src/routes/: splits.ts
backend/src/services/: stellar.ts
contracts/: Cargo.toml  lib.rs
docs/: openapi.json
frontend/: package-lock.json  package.json
frontend/src/components/: split-app.tsx
