[package]
name = "splitnaira-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for SplitNaira — royalty splitting on Stellar"
license = "MIT"
repository = "https://github.com/your-org/splitnaira"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
derive_arbitrary = "1.3.2"
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
